# brainbout

./: .gitignore  .golangci.yml  .prettierignore  .stylelintrc.json  Makefile  README.md  README.md.tpl  biome.json  bunfig.toml  detekt.yml  eslint.config.js  index.html  lefthook.yml  manifest.json  package-lock.json  package.json  playwright.config.ts  postcss.config.js  pyproject.toml  stryker.config.json  tsconfig.json  vite.config.ts
android/: .gitignore  settings.gradle.kts
data-exploration/: norwegian-sample.jsonl
games/: blitz.html  cipher.html  crown.html  flux.html  lex.html  math.html  memory.html  nback.html  puzzles.html  rapid.html  reaction.html  stroop.html  vocab.html
public/: dict-no.json  puzzles.json  words-en.json  words-no.json
scripts/: build.ts  dev.ts  download-dictionaries.ts  extract-puzzles.ts  gen-android-icons.ts  gen-icons.ts  gen-sounds.py  gen-web-icons.ts  generate-words.ts  lint.ts  measure-refs.py  readme-stats.ts  screenshot.ts  serve.ts  spectral-analysis.py
server/: build.ts  go.mod  main.go
src/: chess960.ts  engine.ts  game.ts  hub-render.ts  hub.css  hub.entry.ts  hub.ts  main.ts  sounds.ts  style.css
test/: blitz.test.ts  chess960.test.ts  cipher-srs.test.ts  crown-logic.test.ts  crown-rotation.test.ts  crown.test.ts  dict-json.test.ts  engine.test.ts  flux-render.test.ts  flux.test.ts  game.test.ts  hub-render.test.ts  hub.test.ts  icons.test.ts  lex-board.test.ts  lex-crossword.test.ts  lex-logic.test.ts  lex-srs.test.ts  math.test.ts  memory.test.ts  nback.test.ts  progress.test.ts  property.test.ts  rapid.test.ts  (+9 more)
(+108 files in other folders)
