[project]
name = "brainbout"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4",
    "pedalboard>=0.9",
    "scipy>=1.17",
    "tqdm>=4.67",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "ty>=0.0.23",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812"]

[tool.ty.rules]
all = "error"
